--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <nav>
         <a href="http://www.kitka.org/"><img src="img/logo.png" alt="" id="logo"></a>
-        <a href="http://www.kitka.org/wintersongs2020" class="right">wintersongs 2020</a>
-        <a href="http://www.kitka.org/donate" class="right">donate</a>
+        <a href="http://www.kitka.org/wintersongs2020" class="right">Wintersongs 2020</a>
+        <a href="http://www.kitka.org/donate" class="right">Donate</a>
         
 
     </nav>
